Fixed alignment issue

--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,6 @@
 }
 
 #Statistics > div {
-  width: 200px;
+  width: 170px;
   text-align: center;
 }
